<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/taskListFragment">

    <fragment
        android:id="@+id/taskListFragment"
        android:name="com.example.taskmanager_balanandreimariancirlanalexandrudamian.TaskListFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_task_list" />

    <fragment
        android:id="@+id/taskEditorFragment"
        android:name="com.example.taskmanager_balanandreimariancirlanalexandrudamian.TaskEditorFragment"
        android:label="@string/title_task_editor"
        tools:layout="@layout/fragment_task_editor">

        <argument
            android:name="taskId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.taskmanager_balanandreimariancirlanalexandrudamian.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>